--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Anonymous+Pro');
+@import url('https://fonts.googleapis.com/css?family=Anonymous+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Raleway&display=swap');
 
 html,
