--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,7 +1,15 @@
 /* Normal desktop :992px. */
+@media (min-width: 991px) and (max-width: 1024px) {
+  .banner_content #script-font {
+    font-size: 38px;
+  }
+  .about-image::before {
+    width: 370px;
+    height: 500px;
+  }
+}
 
 /* Tablet desktop :768px. */
-
 @media (min-width: 768px) and (max-width: 991px) {
   .main-menu ul.navbar-nav li {
     display: inline-block;
@@ -10,9 +18,7 @@
 }
 
 /* small mobile :320px. */
-
 @media (max-width: 767px) {
-
   .header-area {
     height: 60px !important;
     background: #000;
@@ -74,7 +80,6 @@
 }
 
 /* Large Mobile :480px. */
-
 @media only screen and (min-width: 320px) and (max-width: 767px) {
 
   code {
