--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,43 @@ body {
   height: 100%;
 }
 
+/* 2. Typography Styles
+======================================== */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+   font-family: 'Raleway',
+   sans-serif;
+   margin: 0 0 15px;
+   color: #444;
+   font-weight: 500;
+}
+
+h1 {
+  font-size: calc(64px / 1.5);
+  line-height: 1.25;
+}
+
+h2 {
+  font-size: calc(64px / 1.5);
+}
+
+h3 {
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font: 20px "Lato", sans-serif;
+  color: grey;
+}
+
+h4 {
+  font-size: calc(23px / 1.5);
+}
+
+/* ---------------------------------- */
+
 a:focus {
   outline: 0px solid;
 }
@@ -23,16 +60,7 @@ p {
   margin: 0 0 15px;
   color: #444;
 }
-
-h1,
-h2,
-h4 {
-  font-family: 'Raleway', sans-serif;
-  margin: 0 0 15px;
-  color: #444;
-  font-weight: 500;
-}
-
+/* 
 h1 {
   font-size: 48px;
   line-height: 50px;
@@ -46,7 +74,7 @@ h2 {
 h4 {
   font-size: 24px;
   line-height: 26px;
-}
+} */
 
 a {
   transition: all 0.3s ease 0s;
@@ -92,11 +120,6 @@ body {
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
 }
 
-@media (max-width: 768px) {
-  .back-to-top {
-    bottom: 15px;
-  }
-}
 
 .back-to-top:focus {
   background: #c7254e;
