--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,5 @@
 /* Normal desktop 992px - 1024px */
+
 @media (min-width: 991px) and (max-width: 1024px) {
   .banner_content #script-font {
     font-size: 38px;
@@ -10,12 +11,12 @@
 }
 
 /* Tablet desktop 768px - 991px */
+
 @media (min-width: 768px) and (max-width: 991px) {
   .main-menu ul.navbar-nav li {
     display: inline-block;
     padding: 0 8px;
   }
-
   .banner_content>#script-font {
     font-size: 35px;
   }
@@ -28,94 +29,75 @@
 }
 
 /* Large Mobile 320px - 767px */
-@media only screen and (min-width: 320px) and (max-width: 767px) {
 
+@media only screen and (min-width: 320px) and (max-width: 767px) {
   code {
     font-size: 60%;
   }
-
   label {
     width: 100%;
   }
-
   .banner_content h1 {
     font-size: 20px !important;
     line-height: 1.3em;
   }
-
   .footer-icons {
     text-align: center;
   }
-
-   .about-image::before,
-   .back-to-top {
-     display: none !important;
-   }
-
-   .header-area {
-     height: 60px !important;
-     background: #000;
-   }
-
-   .navbar-header a.navbar-brand {
-     display: inline-block;
-     height: 60px !important;
-     padding: 9px 0;
-   }
-
-   .navbar-default .navbar-toggle {
-     padding: 15px 0;
-     margin-right: 9px;
-   }
-
-   .nav.navbar-nav.navbar-right {
-     background-color: #252525;
-     padding: 0;
-     margin-top: 0;
-   }
-
-   .main-menu ul.navbar-nav li {
-     display: block;
-   }
-
-   .main-menu ul.navbar-nav li a {
-     padding: 10px 2px;
-   }
-
-   .main-menu ul.navbar-nav li.active a::after {
-     border: 0px solid #fff;
-   }
-
-   .section-headline h2 {
-     font-size: 30px;
-   }
-
-   .well-middle .single-well {
-     margin-top: 30px;
-   }
-
-   .single-skill {
-     margin-bottom: 40px;
-   }
-
-   .project-menu li a {
-     padding: 8px 12px;
-     margin: 10px 4px;
-   }
-
-   .single-awesome-project {
-     width: 100%;
-     float: none;
-   }
-
-   .footer-content {
-     margin-bottom: 30px;
-   }
+  .about-image::before, .back-to-top {
+    display: none !important;
+  }
+  .header-area {
+    height: 60px !important;
+    background: #000;
+  }
+  .navbar-header a.navbar-brand {
+    display: inline-block;
+    height: 60px !important;
+    padding: 9px 0;
+  }
+  .navbar-default .navbar-toggle {
+    padding: 15px 0;
+    margin-right: 9px;
+  }
+  .nav.navbar-nav.navbar-right {
+    background-color: #252525;
+    padding: 0;
+    margin-top: 0;
+  }
+  .main-menu ul.navbar-nav li {
+    display: block;
+  }
+  .main-menu ul.navbar-nav li a {
+    padding: 10px 2px;
+  }
+  .main-menu ul.navbar-nav li.active a::after {
+    border: 0px solid #fff;
+  }
+  .section-headline h2 {
+    font-size: 30px;
+  }
+  .well-middle .single-well {
+    margin-top: 30px;
+  }
+  .single-skill {
+    margin-bottom: 40px;
+  }
+  .project-menu li a {
+    padding: 8px 12px;
+    margin: 10px 4px;
+  }
+  .single-awesome-project {
+    width: 100%;
+    float: none;
+  }
+  .footer-content {
+    margin-bottom: 30px;
+  }
 }
+
 @media (max-width: 768px) {
   .back-to-top {
     bottom: 15px;
   }
 }
-
-
