--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,8 +350,62 @@ div#preloader {
 .banner_content>#script-font {
   color: #fff;
   margin: 20px 0 5px;
-  height: 120px;
+  height: 100px;
   font-family: 'Anonymous Pro', monospace;
+}
+
+.field {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: auto;
+  margin-top: 50px;
+}
+
+.arrow {
+  width: 0;
+  height: 40px;
+  border: 1px solid #ccc;
+  position: relative;
+  animation: scroll 1.5s infinite;
+  -webkit-animation: scroll 1.5s infinite;
+}
+
+.arrow::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: -5px;
+  width: 1px;
+  height: 10px;
+  border-top: 10px solid #ccc;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+}
+
+@keyframes scroll {
+  0% {
+    height: 40px;
+  }
+  30% {
+    height: 70px;
+  }
+  60% {
+    height: 40px;
+  }
+}
+
+@-webkit-keyframes scroll {
+  0% {
+    height: 40px;
+  }
+  30% {
+    height: 70px;
+  }
+  60% {
+    height: 40px;
+  }
 }
 
 svg {
@@ -735,7 +789,7 @@ input.knob {
   cursor: pointer;
   display: inline-block;
   font-weight: 600;
-  margin: 20px;
+  margin: 0 20px;
   padding: 12px 40px;
   text-align: center;
   text-transform: uppercase;
